# zkTransformer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh  llm.sh
src/: CMakeLists.txt  circuit.cpp  circuit.h  global_var.hpp  hyrax.cpp  hyrax.hpp  main_demo_llm.cpp  models.cpp  models.hpp  neuralNetwork.cpp  neuralNetwork.hpp  polynomial.cpp  polynomial.h  prover.cpp  prover.hpp  timer.cpp  timer.hpp  typedef.hpp  utils.cpp  utils.hpp  verifier.cpp  verifier.hpp
